# pico-w-websockets

./: CMakeLists.txt  htmltoh.py  main.c  readme.MD
configs/: lwipopts.h
dnsserver/: dnsserver.c  dnsserver.h
includes/: ap.h  common.h  http.h
picow_websockets/: CMakeLists.txt  b64.h  encrypt.h  packet_ops.c  tenysha1.h  websocket.c  websocket.h
routes/: index.h  mouse.h  status.h
src/: ap.c  http.c
